--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
     margin: 0%;
     box-sizing: border-box;
 }
+
 body {
     width: 100%;
     height: 100vh;
-    background-color: #131312;
+    background-color: #000000;
     font-family: 'Poppins' , sans-serif;
     display: flex;
     align-items: center;
@@ -23,26 +24,100 @@ header {
     flex-wrap: wrap;
     overflow: hidden;
 }
-
+header .song_side .popular_song .pop_song li .img_play .bi{
+    position: absolute;
+    font-size: 20px;
+    cursor: pointer;
+    transition: .3s linear;
+    opacity: 0;
+  }
+  header .song_side .popular_song .pop_song li .img_play:hover .bi{
+    opacity: 1;
+  }
+  header .song_side .popular_song .pop_song li h5{
+    padding: 5px 0px 0px 5px;
+    line-height: 15px;
+    font-size: 10px;
+  }
+  header .song_side .popular_song .pop_song li h5 .subtitle{
+    font-size: 9px;
+    color: #55624c;
+  }
+ 
+  header .song_side .popular_artists {
+     width: 90%;
+     height: auto;
+     /* border: 1px solid #fff; */
+     margin: auto;
+     margin-top: 15px;
+ }
+ header .song_side .popular_artists .h4{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+ }
+ header .song_side .popular_artists .h4 .bi{
+    color: #a7b4a4;
+    cursor: pointer;
+    transition: .3s linear;
+ }
+ header .song_side .popular_artists .h4 .bi:hover{
+    color: rgb(255, 255, 255);
+ }
+ header .song_side .popular_artists .item{
+   width: 100%;
+   height: auto;
+   margin-top: 10px;
+   display: flex;
+   overflow-x: auto;
+   scroll-behavior: smooth;
+ }
+ header .song_side .popular_artists .item::-webkit-scrollbar{
+   display: none;
+ }
+ header .song_side .popular_artists .item li{
+  list-style-type: none;
+  position: relative;
+  min-width: 60px;
+  height: 60px;
+  /* background-color: #fff; */
+  border-radius: 50%;
+  margin-right: 20px;
+  cursor: pointer;
+ }
+ header .song_side .popular_artists .item li img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+ }
+ 
+ .separator {
+     width: 100%;
+     height: 1px;
+     background: var(--jet);
+     margin: 16px 0;
+   }
+   
 header .menu_side, .song_side {
     position: relative;
     width: 25%;
     height: 90%;
     /* border: 1px solid #fff; */
-    background-color: #111727;
+    background-color: #000000;
     box-shadow: 5px 0px 2px #090f1f;
     color: #fff;
 }
 
 header .song_side {
     width: 75%;
-    background: #0b1320;
+    background: #000000;
 }
 
 header .master_play {
     width: 100%;
     height: 10%;
-    background: #111727;
+    background: #000000;
     box-shadow: 0px 3px 8px #090f1f;
 }
 
@@ -90,7 +165,7 @@ header .menu_side .playlist h4 .bi{
     display: none;
 }
 header .menu_side .playlist .active{
-    color: #36e2ec;
+    color: #7bff08;
 }
 header .menu_side .playlist .active span{
     display: none;
@@ -134,7 +209,7 @@ header .menu_side .menu_song li h5{
 }
 header .menu_side .menu_song li h5 .subtitle{
     font-size: 9px;
-    color: #4c5262;
+    color: #7bff08;
 }
 header .menu_side .menu_song li .bi{
     position: absolute;
@@ -162,7 +237,7 @@ header .master_play .wave .wave1{
     height: 10px;
     margin-right: 3px ;
     border-radius: 10px 10px 0px 0px ;
-    background: #36e2ec;
+    background: #7bff08;
     animation: unset;
 }
 header .master_play .wave .wave1:nth-child(2){
@@ -205,16 +280,16 @@ header .master_play h5 {
     width: 130px;
     font-size: 13px;
     margin-left: 15px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     line-height: 17px;
 }
 header .master_play h5 .subtitle{
    font-size: 11px;
-   color: #4c5262;
+   color: #27e312a5;
 }
 header .master_play .icon{
    font-size: 20px;
-   color: #fff;
+   color: #7bff08;
    margin: 0px 20px 0px 40px;
    outline: none;
 }
@@ -223,7 +298,7 @@ header .master_play .icon .bi{
  outline: none;
 }
 header .master_play .icon .bi:nth-child(2){
-border: 1px solid rgb(105, 105, 170,.1);
+border: 1px solid rgba(107, 170, 105, 0.1);
 border-radius: 50%;
 padding: 1px 4px 0px 6px;
 margin: 0px 5px;
@@ -231,7 +306,7 @@ transition: .3s linear;
 }
 
 header .master_play span {
-    color: #fff;
+    color: #7bff08;
     width: 32px;
     font-size: 11px;
     font-weight: 400;
@@ -244,12 +319,12 @@ header .master_play .bar {
     position: relative;
     width: 43%;
     height: 2px;
-    background: rgb(105, 105, 170,.1);
+    background: rgba(26, 75, 222, 0.1);
     margin: 0px 15px 0px 10px;
 }
 header .master_play .bar .bar2{
    position: absolute;
-   background: #36e2ec;
+   background: #b2ec36;
    width: 0%;
    height: 100%;
    top: 0;
@@ -259,7 +334,7 @@ header .master_play .bar .dot{
    position: absolute;
    width: 5px;
    height: 5px;
-   background: #36e2ec;
+   background: #7bff08;
    border-radius: 50%;
    left: 0%;
    top: -1px;
@@ -270,11 +345,11 @@ header .master_play .bar .dot::before{
    position: absolute;
    width: 15px;
    height: 15px;
-   border:1px solid #36e2ec;
+   border:1px solid #7bff08;
    border-radius: 50%;
    left: -6px;
    top: -6px;
-  box-shadow: inset 0px 0px 3px #36e2ec;
+  box-shadow: inset 0px 0px 3px #7bff08;
 }
 header .master_play .bar input{
    position: absolute;
@@ -291,7 +366,7 @@ header .master_play .vol{
   width: 100px;
   height: 2px;
   margin-left: 50px;
- background: rgb(105, 105, 170,.1); 
+ background: rgba(132, 170, 105, 0.1); 
 }
 header .master_play .vol .bi{
 position: absolute;
@@ -313,7 +388,7 @@ header .master_play .vol input{
 
  header .master_play .vol .vol_bar{
     position: absolute;
-    background: #36e2ec;
+    background: #7bff08;
     width: 0%;
     height: 100%;
     top: 0;
@@ -323,7 +398,7 @@ header .master_play .vol input{
     position: absolute;
     width: 5px;
     height: 5px;
-    background: #36e2ec;
+    background: #7bff08;
     border-radius: 50%;
     left: 0%;
     top: -1px;
@@ -334,11 +409,11 @@ header .master_play .vol input{
     position: absolute;
     width: 15px;
     height: 15px;
-    border:1px solid #36e2ec;
+    border:1px solid #7bff08;
     border-radius: 50%;
     left: -6px;
     top: -6px;
-   box-shadow: inset 0px 0px 3px #36e2ec;
+   box-shadow: inset 0px 0px 3px #7bff08;
  }
 
  header .song_side {
@@ -383,7 +458,7 @@ header .master_play .vol input{
    position: absolute;
    width: 100%;
    height: 2.5px;
-   background: #36e2ec;
+   background: #7bff08;
    bottom: -5px;
    left: 0;
    border-radius: 20px;
@@ -393,7 +468,7 @@ header .master_play .vol input{
    width: 40%;
    padding: 1px 10px;
    border-radius: 20px;
-   color: gray;
+   color: rgb(128, 128, 128);
  }
  header .song_side nav .search::before{
      content: '';
@@ -447,7 +522,7 @@ header .master_play .vol input{
  header .song_side .content p{
     font-size: 11px;
     font-weight: 400;
-    color: #4c5262;
+    color: #447b3a;
     margin: 5px;
  }
  header .song_side .content .buttons{
@@ -456,27 +531,27 @@ header .master_play .vol input{
  header .song_side .content .buttons button{
     width: 130px;
     height: 30px;
-    border: 2px solid #36e2ec;
+    border: 2px solid #7bff08;
     outline: none;
     border-radius: 20px;
-    background: #5adae0;
+    background: #1ae045;
     color: #fff;
     cursor: pointer;
     transition: .3s linear;
  }
  header .song_side .content .buttons button:hover{
-    border: 2px solid #36e2ec;
+    border: 2px solid #7bff08;
     background: none;
-    color: #36e2ec;
+    color: #7bff08;
  }
  header .song_side .content .buttons button:nth-child(2){
-    border: 2px solid #36e2ec;
+    border: 2px solid #7bff08;
     background: none;
-    color: #36e2ec;
+    color: #7bff08;
  }
  header .song_side .content .buttons button:nth-child(2):hover{
-    border: 2px solid #36e2ec;
-    background: #36e2ec;
+    border: 2px solid #7bff08;
+    background: #7bff08;
     color: #fff;
  }
 
@@ -520,7 +595,7 @@ header .master_play .vol input{
      transition: .3s linear;
  }
  header .song_side .popular_song .pop_song li:hover{
-     background: rgb(105, 105, 170,.1);
+     background: rgba(125, 170, 105, 0.1);
  }
  header .song_side .popular_song .pop_song li .img_play{
     position: relative;
@@ -534,70 +609,4 @@ header .master_play .vol input{
    width: 100%;
    height: 100%;
  }
- header .song_side .popular_song .pop_song li .img_play .bi{
-   position: absolute;
-   font-size: 20px;
-   cursor: pointer;
-   transition: .3s linear;
-   opacity: 0;
- }
- header .song_side .popular_song .pop_song li .img_play:hover .bi{
-   opacity: 1;
- }
- header .song_side .popular_song .pop_song li h5{
-   padding: 5px 0px 0px 5px;
-   line-height: 15px;
-   font-size: 10px;
- }
- header .song_side .popular_song .pop_song li h5 .subtitle{
-   font-size: 9px;
-   color: #4c5262;
- }
-
- header .song_side .popular_artists {
-    width: 90%;
-    height: auto;
-    /* border: 1px solid #fff; */
-    margin: auto;
-    margin-top: 15px;
-}
-header .song_side .popular_artists .h4{
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-}
-header .song_side .popular_artists .h4 .bi{
-   color: #a4a8b4;
-   cursor: pointer;
-   transition: .3s linear;
-}
-header .song_side .popular_artists .h4 .bi:hover{
-   color: #fff;
-}
-header .song_side .popular_artists .item{
-  width: 100%;
-  height: auto;
-  margin-top: 10px;
-  display: flex;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-}
-header .song_side .popular_artists .item::-webkit-scrollbar{
-  display: none;
-}
-header .song_side .popular_artists .item li{
- list-style-type: none;
- position: relative;
- min-width: 60px;
- height: 60px;
- /* background-color: #fff; */
- border-radius: 50%;
- margin-right: 20px;
- cursor: pointer;
-}
-header .song_side .popular_artists .item li img{
- width: 100%;
- height: 100%;
- border-radius: 50%;
- position: absolute;
-}
+ 
